# MartyDetector

./: .gitignore  .mise.toml  CMakeLists.txt  Config.swift  Gui.swift  Info.plist  Main.swift  Package.swift  Project.swift  README.md  TelegramAPI.swift
.github/workflows/: build-on-tag.yml
MartyDetector/Sources/: Config.swift  FileWriter.swift  Gui.swift  Main.swift  SecureStorage.swift  SourceCapture.swift  TelegramAPI.swift  VideoCapture.swift
Tuist/: Package.swift
